@@ -17,4 +17,6 @@ set -e
 unset CDPATH
 
 SCRIPTS_DIR=$(cd "$(dirname "$0")" && cd "../" && pwd)
-java -cp "${SCRIPTS_DIR}"/jars/clients-*-utility.jar sleeper.clients.status.report.FilesStatusReport "$@"
+java -cp "${SCRIPTS_DIR}"/jars/clients-*-utility.jar \
+  --add-opens java.base/java.nio=ALL-UNNAMED \
+  sleeper.clients.status.report.FilesStatusReport "$@"
